# Seele-Vollerei-Bot

./: .breakpoints  .gitignore  README.md  main.py  pyproject.toml
cogs/: crypto.py  error_handling.py  game.py  info.py  learnjp.py  net.py  observer.py  riot.py  tts.py  utility.py
configurations/: cogs-template.txt  error-logs.txt  tts-config.txt
host/: keep_alive.py
