[tool.poetry]
name = "bronya-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
youtube-dl = "^2021.3.14"
flask = "^1.1.2"
PyNaCl = "^1.4.0"
tasks = "^2.6.0"
ffmpeg = "^1.4"
gTTS = "^2.2.3"
riotwatcher = "^3.1.4"
pylol-rl = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
